@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export GRAILS_OPTS="-Xmx2G -Xms1G -XX:MaxPermSize=1G -server"
+
 # fail if any line fails
 set -e
 
